--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
         <section class="about-text">
           <p>
            Proactive and detailed UI UX Designer with 10+ years of proven end to end experience delivering enjoyable web and mobile products. 
-          Clear under­ standing of technologies allows seamless collaboration with developers, while strong com­ munication skills ensure trans­parency 
+          Clear under­standing of technologies allows seamless collaboration with developers, while strong com­munication skills ensure trans­parency 
           with skakeholders. Up­ to-date knowledge of Adobe XD, Figma, Adobe Photoshop, Illustrator, lnDesign, After Effect, Premiere pro And 
           HTML, CSS, BootStrap, Java Script, React JS. 
           </p>
 
           <p>
             My passion for technology and commitment to delivering high-quality solutions drive my professional endeavors.
-            I thrive in dynamic environments and am always eager to take on new challenges that push the boundaries of innovation.
+            I thrive in dynamic environments and i am always eager to take on new challenges that push the boundaries of innovation.
           </p>
         </section>
 
@@ -244,7 +244,7 @@
 
                 <p class="service-item-text">
                     •  Designing Website, UI UX for Web and mobile applications. Working with clients to fulfill thair Requirements <br/><br/>
-                    •	Re-designing existing UI to better adapt for android and web application. Workingclosely with the Dev. team to implement vision. 
+                    •	Re-designing existing UI to better adapt for android and web application. Working closely with the Dev. team to implement vision. 
                       Presenting UX Design concepts to the project stakeholders for review and feedback. <br/><br/>
                     •	Creating mock-ups for clients requirement and implementation of UI as per mock-ups design <br/><br/>
                     •	Gathering and evaluating user requirements in collaboration with product manager. Driving the development and communication of clear design guidelines, patterns, libraries and asset <br/><br/>
