--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                     •	Creating mock-ups for clients requirement and implementation of UI as per mock-ups design <br/><br/>
                     •	Gathering and evaluating user requirements in collaboration with product manager. Driving the development and communication of clear design guidelines, patterns, libraries and asset <br/><br/>
                     • Design web & mobile apps and websites. Creating user friendly mobile applications for iOS and Android. Maintain a Belance portfolio and redesigned and making the creative innovative and beautiful design for both desktop and mobile apps.<br/><br/>
-                    • Full time creative mobile app designer.Develop innovative ideas and concepts. Train designers and Junior designers. Create e-commerce and mobile application such as dating, AR apps, Food, Ticket Booking app etc.
+                    • Full time creative mobile app designer. Develop innovative ideas and concepts. Train designers and Junior designers. 
+                      Create e-commerce and mobile application such as dating, AR apps, Food, Ticket Booking app etc.
                 </p>
               </div>
 
@@ -692,7 +693,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <data value="80">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -705,7 +706,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
+                <data value="900">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -731,7 +732,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <data value="50">70%</data>
               </div>
 
               <div class="skill-progress-bg">
