--- a/index.html
+++ b/index.html
@@ -638,15 +638,21 @@
                     Presenting UX Design concepts to the project stakeholders for review and feedback.  
                 </p>
                 <br />
-                <p class="timeline-text">
-                    <strong> ArtinWhite </strong><br />
-                    <span>UI & UX DESIGNER (April 2014 - August 2014)  </span> 
-                    
-                    Gathering and evaluating user requirements in collaboration with product manager.
-                    Driving the development and communication of clear design guidelines, patterns, libraries and asset
-                </p>
-                <br />
-            </li>
+                 </li>
+                           <li class="timeline-item">
+
+                  <h4 class="h4 timeline-item-title">ArtinWhite </h4>
+
+                  <span> UI & UX DESIGNER (April 2014 - August 2014)</span><br />
+
+                  <p class="timeline-text">
+                    <span>GRAPHIC, WEB, UI & UX </span>
+                    <strong>Gathering and evaluating user requirements in collaboration with product manager.
+                    Driving the development and communication of clear design guidelines, patterns, libraries and asset </strong><br />
+                  </p>
+
+                </li>
+            
                              <li class="timeline-item">
 
                   <h4 class="h4 timeline-item-title"> MeNav- qBmedix, uaemedix </h4>
