--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
               <span>2006 — 2009</span>
 
               <p class="timeline-text">
-               Diploma in Multimedia & animation ARENA multimedia & Animation, Ameerpet, Hyderabad, India
+               Diploma in Multimedia & animation ARENA multimedia & Animation
               </p>
 
             </li>
