--- a/index.html
+++ b/index.html
@@ -712,11 +712,24 @@
 
           <ul class="skills-list content-card">
 
+                     <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">UX / UI</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+
             <li class="skills-item">
 
               <div class="title-wrapper">
                 <h5 class="h5">Web design</h5>
-                <data value="80">90%</data>
+                <data value="90">90%</data>
               </div>
 
               <div class="skill-progress-bg">
